--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,7 +3,7 @@
         <div class="lg:w-1/3 h-sreen sm:w-1/3">
             <div class=" text-green1 bg-green-50 h-full flex justify-between flex-col items-center p-7">
                 <div>
-                    <img width="110px" src="../../assets//Images/logo.png" alt="">
+                    <img routerLink="/" width="110px" src="../../assets//Images/logo.png" alt="">
                 </div>
                 <div class="register-text flex flex-col justify-center items-center p-11">
                     <p class="text-6xl text-center font-light drop-shadow-md">Welcome Back!</p>
