--- a/src/app/add-commute/add-commute.component.html
+++ b/src/app/add-commute/add-commute.component.html
@@ -5,18 +5,24 @@
   <div class="relative w-96">
     <div class="rounded-lg shadow-lg relative flex flex-col w-full bg-white focus:outline-none">
         <!-- close button -->
-        <div class="relative p-2">
-            <button (click)="toggleModal()" class="p-2 absolute right-2 top-2 text-slate-600 hover:bg-slate-200 "><i class="fa-solid fa-xmark fa-lg"></i></button>
+        <div class="p-2 relative">
+            <button (click)="toggleModal()" class="absolute right-1 top-1 p-2 text-slate-600 hover:bg-slate-200 "><i class="fa-solid fa-xmark fa-lg"></i></button>
         </div>
         <!--body-->
-        <div class="p-6 flex">
-            <p class=" text-lg">
-            I always felt like I could do anything. That's the main
-            thing people are controlled by! Thoughts- their perception
-            of themselves! They're slowed down by their perception of
-            themselves. If you're taught you can't do anything, you
-            won't do anything. I was taught I could do everything.
-            </p>
+        <div class="p-8 flex flex-col items-center justify-center">
+            <img class="mb-3" width="200px" src="../../assets/Images/commute-img.png" alt="">
+            <form>
+                <select class="w-80 h-12 py-3 px-3 text-lg bg-zinc-100 focus:outline-none">
+                    <option selected disabled hidden class="text-zinc-100">Choose commute Method</option>
+                    <option value="walking">walking</option>
+                    <option value="cycling">cycling</option>
+                    <option value="publicTransport">public transport</option>
+                    <option value="carPooling">car pooling</option>
+                </select>
+                <input class="w-80 h-12 py-3 px-3 text-lg mt-4 bg-zinc-100 focus:outline-none placeholder:text-slate-950"  type="text" placeholder="Enter distance in km">
+                <input class="w-80 h-12 py-3 px-3 text-lg mt-4 bg-zinc-100 focus:outline-none" type="date">
+                <button class="w-80 h-12 py-3 px-3 text-lg mt-4 text-slate-950 bg-lime-200" type="submit">Add Commute</button>
+            </form>   
         </div>
     </div>
   </div>
