--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,17 +23,19 @@
             <p class="text-6xl text-green1 drop-shadow-md">Welcome Back!</p>
             <p class="text-xl text-zinc-400 text-center font-medium max-w-80 mt-6">Use your email id and password to login :</p>
 
-            <form class="mt-11">
-                <div class="relative text-zinc-700 mb-6 flex items-center">
+            <form [formGroup]="loginForm" class="mt-11">
+                <div class="relative text-zinc-700  flex items-center">
                     <i class="fa-solid fa-envelope-open-text fa-xl absolute ms-3"></i>
-                    <input class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="email" placeholder="Enter your email">
+                    <input name="email" formControlName="email" class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="email" placeholder="Enter your email">
                 </div>
-                <div class="relative text-zinc-700 flex items-center">
+                <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched" class="mt-3 text-red-500 max-w-96">*Invalid email. Please enter you valid mail id</div>
+                <div class="relative text-zinc-700 mt-6 flex items-center">
                     <i class="fa-solid fa-lock fa-xl absolute ms-3"></i>
-                    <input class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="password" placeholder="Enter your password">
+                    <input name="password" formControlName="password" class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="password" placeholder="Enter your password">
                 </div>
+                <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched" class="mt-3 text-red-500 max-w-96">*Invalid password. Only alphabets and numeric values allowed</div>
                 <div class="text-center mt-7">
-                    <button type="submit" class="mt-6 border-2 border-green1 rounded-full px-7 py-1 text-2xl font-medium bg-green1  text-slate-50">SIGN IN</button>
+                    <button (click)="handleLogin()" type="submit" class="mt-6 border-2 border-green1 rounded-full px-7 py-1 text-2xl font-medium bg-green1  text-slate-50">SIGN IN</button>
                 </div>
             </form>
         </div>
