--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -23,21 +23,24 @@
             <p class="text-6xl text-green1 drop-shadow-md">Create Account</p>
             <p class="text-xl text-zinc-400 font-medium mt-6 max-w-96 text-center">Use your username, email id and password to register :</p>
 
-            <form class="mt-11">
-                <div class="relative text-zinc-700 mb-6 flex items-center">
-                    <i class="fa-regular fa-user fa-xl absolute ms-3"></i>
-                    <input class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="text" placeholder="Enter your username">
-                </div>
-                <div class="relative text-zinc-700 mb-6 flex items-center">
-                    <i class="fa-solid fa-envelope-open-text fa-xl absolute ms-3"></i>
-                    <input class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="email" placeholder="Enter your email">
-                </div>
+            <form [formGroup]="registerForm" class="mt-11">
                 <div class="relative text-zinc-700 flex items-center">
-                    <i class="fa-solid fa-lock fa-xl absolute ms-3"></i>
-                    <input class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="password" placeholder="Enter your password">
+                    <i class="fa-regular fa-user fa-xl absolute ms-3"></i>
+                    <input name="username" formControlName="username" class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="text" placeholder="Enter your username">
                 </div>
+                <div *ngIf="registerForm.get('username')?.errors && registerForm.get('username')?.touched" class="mt-3 text-red-500 max-w-96">*Invalid username. Only alphabets allowed</div>
+                <div class="relative text-zinc-700 mt-5 flex items-center">
+                    <i class="fa-solid fa-envelope-open-text fa-xl absolute ms-3"></i>
+                    <input name="email" formControlName="email" class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="email" placeholder="Enter your email">
+                </div>
+                <div *ngIf="registerForm.get('email')?.errors && registerForm.get('email')?.touched" class="mt-3 text-red-500 max-w-96">*Invalid email. Please enter you valid mail id</div>
+                <div class="relative text-zinc-700 mt-5 flex items-center">
+                    <i class="fa-solid fa-lock fa-xl absolute ms-3"></i>
+                    <input name="password" formControlName="password" class="w-96 h-14 ps-12 py-3 px-3 text-xl bg-zinc-100 focus:outline-none"  type="password" placeholder="Enter your password">
+                </div>
+                <div *ngIf="registerForm.get('password')?.errors && registerForm.get('password')?.touched" class="mt-3 text-red-500 max-w-96">*Invalid password. Only alphabets and numeric values allowed</div>
                 <div class="text-center mt-7">
-                    <button type="submit" class="mt-6 border-2 border-green1 rounded-full px-7 py-1 text-2xl font-medium bg-green1  text-slate-50">SIGN UP</button>
+                    <button (click)="handleRegister()" type="submit" class="mt-6 border-2 border-green1 rounded-full px-7 py-1 text-2xl font-medium bg-green1  text-slate-50">SIGN UP</button>
                 </div>
             </form>
         </div>
